# vectorguard

./: .gitignore  Dockerfile  README.md  conftest.py  data_factory.py  docker-compose.yml  dockerfile  embeddings.py  index.html  main.py  pyproject.toml  pytest.ini  qdrant_client_wrapper.py  requirements.txt  test_concurrent_tenant_access.py  test_cross_tenant_query.py  test_metadata_filter_bypass.py  test_pii_leakage.py  test_semantic_neighbor_leak.py  vectorguard-ci.yml
.chroma_showcase/: chroma.sqlite3
.forge/: FORGE.md
.forge/rules/: financial.md
.github/workflows/: security_test.yml
configs/: env_local.yml  payload_library.yml  tenant_rules.yml
core/: async_llm_client.py  logger.py  vector_db_manager.py
data/: behaviors.csv  behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
data/attachments/: 11fe2a21ccabb408.txt  1aeb4f87a3b67303.txt  202103b7aca760a5.txt  4d38874f08e953eb.txt  98881163223ef87f.txt  ae74a809a1481e66.txt  f20c9f45aff824f2.txt
data/test-cases/: 1693599df03617.json  (+15 more)
data_forge/: generator.py  poison_injector.py
export/: influxDbData.txt  prometheusData.txt
history/: categories-trend.json  duration-trend.json  history-trend.json  history.json  retry-trend.json
tests/: test_context_poisoning.py  test_pii_leakage.py  test_tenant_isolation.py
vectorguard.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
widgets/: behaviors.json  categories-trend.json  duration-trend.json  duration.json  executors.json  history-trend.json  retry-trend.json  severity.json  summary.json
(+1 files in other folders)
