[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vectorguard"
version = "0.1.0"
description = "Shift-Left AI Red-Teaming Framework"
authors = [{ name="Yaniv2809" }]
dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "aiohttp>=3.9.0",
    "pyyaml>=6.0",
    "fixtureforge>=2.0.2",
    "chromadb>=0.4.0",
    "pydantic>=2.5.0"
]

[tool.setuptools]
packages = ["core", "data_forge", "tests"]